syntax = "proto3";

package pb;

import "services/quests/quest.proto";
import "services/modules/module.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";


message CreateQuestRequest {
  string name = 1;
  string shortDescription = 2;
  int32 worldId = 3;
  int32 systemId = 4;
}

message CreateQuestCharacterRequest {
  int32 questId = 1;
  int32 characterId = 2;
  string motivationalLetter = 3;
}

message CreateQuestResponse {
  Quest quest = 1;
  ViewModule module = 2;
}

message UpdateQuestRequest {
  int32 questId = 1;
  optional string name = 2;
  optional string shortDescription = 3;
  optional bool public = 4;
  optional int32 worldId = 5;
  optional int32 systemId = 6;
  optional QuestStatus status = 7;
  optional bool canJoin = 8;
}

message UpdateQuestCharacterRequest {
  int32 questId = 1;
  int32 characterId = 2;
  optional int32 approved = 3;
  optional string motivationalLetter = 4;
}

message UploadQuestImageRequest {
  int32 questId = 1;
  bytes data = 2;
  int32 imageTypeId = 3;
}

message GetQuestsRequest {
  optional bool public = 1;
  repeated int32 tags = 2;
  optional int32 worldId = 3;
  optional int32 systemId = 4;
  optional bool canJoin = 5;
  optional QuestStatus status = 6;
  optional string orderBy = 7;
  optional int32 limit = 8;
  optional int32 offset = 9;
}

message GetQuestCharactersRequest {
  int32 questId = 1;
}

message GetQuestCharactersResponse {
  repeated QuestCharacter questCharacters = 1;
}

message GetQuestsResponse {
  repeated int32 questIds = 1;
  int32 totalCount = 2;
}

message GetQuestByIdRequest {
  int32 questId = 1;
}

message DeleteQuestCharacterRequest {
  int32 questId = 1;
  int32 characterId = 2;
}